app/src/main/java/com/example/littlelemoncapstone/ui/theme/Color.kt
package com.example.littlelemoncapstone.ui.theme

import androidx.compose.ui.graphics.Color

object LittleLemonColor {
    val white= Color(0xffffffff);
    val green = Color(0xFF495e57) // primary
    // primary variant
    val charcoal = Color(0xFF333333) // Example ARGB value for charcoal
    val orange =Color(0xFFEE9972) //secondary
    val pink =Color(0xfffbdabb) //secondary variant
    val error =Color(0xffb00020) //error
    val background =Color(0xff141414)

    val cloud = Color(0xFFEDEFEE)

    val Purple80 = Color(0xFFD0BCFF)
    val PurpleGrey80 = Color(0xFFCCC2DC)
    val Pink80 = Color(0xFFEFB8C8)

    val Purple40 = Color(0xFF6650a4)
    val PurpleGrey40 = Color(0xFF625b71)
    val Pink40 = Color(0xFF7D5260)
    val yellow = Color(0xFFF4CE14)
}

